--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Kanit', sans-serif;
+    text-decoration: none;
+}
+
+header{
+    background-color: aquamarine;
+}
+
+footer{
+    height: 15vh;
+    background-color: rgb(34,47,63);
+    color: aliceblue;
+    
+}
+
+header nav{
+    display: flex;
+    align-items: center;
+}
+header nav ul {
+    display: flex;
+    list-style-type: none;
+    
+}
+
+header nav ul li{
+    margin: 0px 20px 0px 20px;
+}
+
+header nav ul li input{
+    height: 30px;
+    width: 600px;
+    border-radius: 2px;
+}
+header nav ul li button{
+    padding: 5px;
+    display: flex;
+    
+
 }
