--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,11 +4,15 @@
     margin: 0;
     padding: 0;
     font-family: 'Kanit', sans-serif;
-    text-decoration: none;
+    list-style-type: none;
+    
 }
 
 header{
-    background-color: aquamarine;
+    background-color: rgb(18,24,33);
+    color: white;
+    border: red solid;
+    
 }
 
 footer{
@@ -24,7 +28,7 @@ header nav{
 }
 header nav ul {
     display: flex;
-    list-style-type: none;
+    
     
 }
 
@@ -40,6 +44,18 @@ header nav ul li input{
 header nav ul li button{
     padding: 5px;
     display: flex;
-    
+}
 
+nav ul li a{
+    text-decoration: none;
+    color: aliceblue;
+    
+}
+
+main nav ul{
+    display: flex;
+   
+    background-color: rgb(16, 20, 26);
+    color: aliceblue;
+    padding: 20px;
 }
